Updated fixes to prevent zoom/resize on iOS

--- a/resources/public/css/main.css
+++ b/resources/public/css/main.css
@@ -3,7 +3,7 @@
 }
 
 html {
-  touch-action: manipulation;
+  touch-action: none;
 }
 
 html, body, div, span, ul, li {
